# ecu_sw

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  LICENSE  Makefile  README.md  STM32F407VGTX_FLASH_custom.ld  ecu_sw Debug.launch  ecu_sw-Debug.launch  ecu_sw.ioc  gl_rover_ecu_sw Debug.launch  gl_rover_ecu_sw.ioc
.github/: copilot-instructions.md
.github/promts/: sad-component.promt.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: ECU_sw.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Core/Inc/: HeartbeatTask.h  hal_motor.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: HeartbeatTask.c  hal_motor.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
Debug/: makefile  objects.list  sources.mk
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su  stm32f4xx_it.d  subdir.mk
Debug/KPI_Rover/LEDs/: driver.cyclo  driver.d  driver.su  manager.cyclo  manager.d  manager.su  subdir.mk
Debug/KPI_Rover/Logger/: subdir.mk  ul_ulog.cyclo  ul_ulog.d  ul_ulog.su  ulog.cyclo  ulog.d  ulog.su
Debug/USB_DEVICE/App/: subdir.mk
ECU_sw/: .cproject  .project  ECU_sw.ioc
ECU_sw/Core/Inc/: heartbeat.h  main.h  (+1 more)
ECU_sw/Debug/: ECU_sw.elf  ECU_sw.list  ECU_sw.map  makefile  objects.list
KPI_Rover/: KPIRover.c  KPIRover.h
KPI_Rover/ADC/: adc_driver.c  adc_driver.h  adc_manager.c  adc_manager.h  drvAdc.c  drvAdc.h  ulAdc.c  ulAdc.h
KPI_Rover/Buzzer/: driver.c  driver.h  generic.c  generic.h  manager.c
KPI_Rover/Buzzer/mock-suite/: CMakeLists.txt  config.h
KPI_Rover/Buzzer/mock-suite/inc/: FreeRTOS.h  cmsis_os2.h  colors.h  fail.h  main.h  scheduler.h  stm32f4xx_hal.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_systick.h  test.h  timers.h
KPI_Rover/Buzzer/mock-suite/src/: cmsis_os2.c  scheduler.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_systick.c  timers.c
KPI_Rover/Buzzer/mock-suite/test/: buzzer-driver.c  buzzer-driver.cpp
KPI_Rover/Communication/: ITransport.h  ProtocolHandler.c  ProtocolHandler.h  UARTTransport.c  UARTTransport.h  crc16.c  crc16.h  drvUart.c  drvUart.h  messageQueueId.h
KPI_Rover/Database/: ulDatabase.c  ulDatabase.h  ulStorage.c  ulStorage.h
KPI_Rover/Encoders/: drvEncoder.c  drvEncoder.h  ulEncoder.c  ulEncoder.h
KPI_Rover/IMU/: drvImu.c  drvImu.h  ulImu.c  ulImu.h
KPI_Rover/LEDs/: driver.c  driver.h  manager.c  manager.h
KPI_Rover/Logger/: README.md  ul_ulog.c  ul_ulog.h  ulog.c  ulog.h
KPI_Rover/Motors/: PCA9685.c  PCA9685.h  drvMotors.c  drvMotors.h  motors_driver.c  motors_driver.h  motors_manager.c  motors_manager.h  ulGD.c  ulGD.h  ulMotorsController.c  ulMotorsController.h  ulPID.c  ulPID.h  ulRLS.c  ulRLS.h  ul_motors_controller.c  ul_motors_controller.h  ul_pid.c  ul_rls.c
ROVER_IO/: .cproject  .mxproject  .project  ROVER_IO.ioc
USB_DEVICE/App/: usbd_cdc_if.c
cmake/stm32cubemx/: CMakeLists.txt
docs/: sad.md
(+33 files in other folders)
